fixed color contrast problems

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -17,10 +17,10 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #57cc99;  /* headlines on a white background */ 
-  --headline-color-on-color: #f8b21a; /* headlines on a colored background */ 
+  --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #2f97c1 ; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #a0f4f0  ;
+  --paragraph-color-on-color: white ; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #2f97c1  ;
   --nav-link-color: #396E94;
   --nav-background-color: #fea95f;
   --nav-hover-link-color: white;
